test/visibility/empty/exceptEverything.good
exceptEverything.chpl:14: In function 'main':
exceptEverything.chpl:15: error: unresolved call 'foo()'
